{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 98,
  "lineage": "52baa412-2d0d-3a02-3a93-7f9e52195447",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/networkInterfaces/hub-nic",
            "internal_domain_name_suffix": "kwv4ntdpfjbevbpryzctv3ejfc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub",
                "primary": true,
                "private_ip_address": "10.0.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-ED-71-31",
            "name": "hub-nic",
            "private_ip_address": "10.0.0.68",
            "private_ip_addresses": [
              "10.0.0.68"
            ],
            "resource_group_name": "hub-vnet-rg",
            "tags": {
              "environment": "hub"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Compute/virtualMachines/hub-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-mgmt",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub-nva-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/networkInterfaces/hub-nva-nic",
            "internal_domain_name_suffix": "kwv4ntdpfjbevbpryzctv3ejfc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub-nva",
                "primary": true,
                "private_ip_address": "10.0.0.36",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz"
              }
            ],
            "location": "eastus",
            "name": "hub-nva-nic",
            "private_ip_address": "10.0.0.36",
            "private_ip_addresses": [
              "10.0.0.36"
            ],
            "resource_group_name": "hub-nva-rg",
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-dmz",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "onprem-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkInterfaces/onprem-nic",
            "internal_domain_name_suffix": "v2tsl5bsutmelezmliaorxi2ke.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "onprem",
                "primary": true,
                "private_ip_address": "192.168.1.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-pip",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-0C-14-EF",
            "name": "onprem-nic",
            "private_ip_address": "192.168.1.132",
            "private_ip_addresses": [
              "192.168.1.132"
            ],
            "resource_group_name": "onprem-vnet-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Compute/virtualMachines/onprem-vm"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke1-nic",
            "internal_domain_name_suffix": "gmjujknmydxutoneixjs1fz1oe.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke1",
                "primary": true,
                "private_ip_address": "10.1.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D8-F0-B1",
            "name": "spoke1-nic",
            "private_ip_address": "10.1.0.68",
            "private_ip_addresses": [
              "10.1.0.68"
            ],
            "resource_group_name": "spoke1-vnet-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke1-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.spoke1-mgmt",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/networkInterfaces/spoke2-nic",
            "internal_domain_name_suffix": "n5xy5gb5cugelaafz4umlh4nea.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke2",
                "primary": true,
                "private_ip_address": "10.2.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DB-02-53",
            "name": "spoke2-nic",
            "private_ip_address": "10.2.0.68",
            "private_ip_addresses": [
              "10.2.0.68"
            ],
            "resource_group_name": "spoke2-vnet-rg",
            "tags": {
              "environment": "spoke2"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Compute/virtualMachines/spoke2-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.spoke2-mgmt",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "onprem-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg",
            "location": "eastus",
            "name": "onprem-nsg",
            "resource_group_name": "onprem-vnet-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "onprem"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.180.135",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hub-vpn-gateway1-pip",
            "resource_group_name": "hub-vnet-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.255.142.218",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "onprem-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "onprem"
            },
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "onprem-vpn-gateway1-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-vpn-gateway1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.191.183.160",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "onprem-vpn-gateway1-pip",
            "resource_group_name": "onprem-vnet-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "location": "eastus",
            "name": "hub-gateway-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "toHub",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "location": "eastus",
            "name": "spoke1-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
              "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "location": "eastus",
            "name": "spoke2-rt",
            "resource_group_name": "hub-nva-rg",
            "route": [
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
              "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.32/27",
            "address_prefixes": [
              "10.0.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
            "name": "dmz",
            "resource_group_name": "hub-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.255.224/27",
            "address_prefixes": [
              "10.0.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "hub-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.64/27",
            "address_prefixes": [
              "10.0.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "hub-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.255.224/27",
            "address_prefixes": [
              "192.168.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "resource_group_name": "onprem-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "onprem-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.128/25",
            "address_prefixes": [
              "192.168.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "onprem-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "onprem-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.64/27",
            "address_prefixes": [
              "10.1.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "spoke1-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "name": "workload",
            "resource_group_name": "spoke1-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.0.64/27",
            "address_prefixes": [
              "10.2.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "name": "mgmt",
            "resource_group_name": "spoke2-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.2.1.0/24",
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "name": "workload",
            "resource_group_name": "spoke2-vnet-rg",
            "timeouts": {
            },
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mgmt-nsg-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "network_security_group_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_network_security_group.onprem-nsg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-mgmt",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "hub-gateway-rt-hub-vnet-gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_route_table.hub-gateway-rt",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-mgmt",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1-rt-spoke1-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "route_table_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_route_table.spoke1-rt",
            "azurerm_subnet.spoke1-workload",
            "azurerm_virtual_network.spoke1-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-mgmt",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2-rt-spoke2-vnet-workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "route_table_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-nva-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "timeouts": {
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub-nva-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_route_table.spoke2-rt",
            "azurerm_subnet.spoke2-workload",
            "azurerm_virtual_network.spoke2-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cce6ab55-2a6f-4a42-85f1-c6453af4892a",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "eastus",
            "name": "hub-vnet",
            "resource_group_name": "hub-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.32/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
                "name": "dmz"
              },
              {
                "address_prefix": "10.0.0.64/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.0.255.224/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "environment": "hub-spoke"
            },
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.hub-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "onprem-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "fc2527af-a432-45d8-932c-5a00e8dd1c54",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet",
            "location": "eastus",
            "name": "onprem-vnet",
            "resource_group_name": "onprem-vnet-rg",
            "subnet": [
              {
                "address_prefix": "192.168.1.128/25",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/mgmt",
                "name": "mgmt",
                "security_group": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/networkSecurityGroups/onprem-nsg"
              },
              {
                "address_prefix": "192.168.255.224/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "environment": "onprem"
            },
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.onprem-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a9441333-c0ac-49ef-b9a4-45d32d973b74",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "eastus",
            "name": "spoke1-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.64/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke1"
            },
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.spoke1-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "988fef6f-153f-450c-8005-cfa8c59fcd20",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "location": "eastus",
            "name": "spoke2-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.64/27",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke2"
            },
            "timeouts": {
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.spoke2-vnet-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hub-vnet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.0.255.254",
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "172.191.180.135"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/publicIPAddresses/hub-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "hub-vpn-gateway1",
            "private_ip_address_enabled": false,
            "resource_group_name": "hub-vnet-rg",
            "sku": "VpnGw1",
            "timeouts": {
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "onprem-vpn-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "192.168.255.254",
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "192.168.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "172.191.183.160"
                    ]
                  }
                ]
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/publicIPAddresses/onprem-vpn-gateway1-pip",
                "subnet_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworks/onprem-vnet/subnets/GatewaySubnet"
              }
            ],
            "location": "eastus",
            "name": "onprem-vpn-gateway1",
            "private_ip_address_enabled": false,
            "resource_group_name": "onprem-vnet-rg",
            "sku": "VpnGw1",
            "timeouts": {
            },
            "type": "Vpn",
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.onprem-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hub-onprem-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/connections/hub-onprem-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "hub-onprem-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1",
            "resource_group_name": "hub-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "timeouts": {
            },
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.onprem-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "onprem-hub-conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/connections/onprem-hub-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "onprem-hub-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "resource_group_name": "onprem-vnet-rg",
            "routing_weight": 1,
            "shared_key": "4-v3ry-53cr37-1p53c-5h4r3d-k3y",
            "timeouts": {
            },
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/onprem-vnet-rg/providers/Microsoft.Network/virtualNetworkGateways/onprem-vpn-gateway1"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_public_ip.onprem-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.onprem-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_subnet.onprem-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.onprem-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway",
            "azurerm_virtual_network_gateway.onprem-vpn-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke1-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke1-peer",
            "name": "hub-spoke1-peer",
            "remote_virtual_network_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "hub-vnet-rg",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub-spoke2-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke2-peer",
            "name": "hub-spoke2-peer",
            "remote_virtual_network_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "resource_group_name": "hub-vnet-rg",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke1-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/spoke1-hub-peer",
            "name": "spoke1-hub-peer",
            "remote_virtual_network_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke1-vnet-rg",
            "timeouts": {
            },
            "use_remote_gateways": true,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke1-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke1-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2-hub-peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/spoke2-vnet-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/virtualNetworkPeerings/spoke2-hub-peer",
            "name": "spoke2-hub-peer",
            "remote_virtual_network_id": "/subscriptions/94d98936-b0d4-463a-849b-b97d980aeff7/resourceGroups/hub-vnet-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke2-vnet-rg",
            "timeouts": {
            },
            "use_remote_gateways": true,
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub-vpn-gateway1-pip",
            "azurerm_resource_group.hub-vnet-rg",
            "azurerm_resource_group.spoke2-vnet-rg",
            "azurerm_subnet.hub-gateway-subnet",
            "azurerm_virtual_network.hub-vnet",
            "azurerm_virtual_network.spoke2-vnet",
            "azurerm_virtual_network_gateway.hub-vnet-gateway"
          ]
        }
      ]
    }
  ]
}